[gd_scene load_steps=8 format=2]

[ext_resource path="res://Ressources/background.png" type="Texture" id=1]
[ext_resource path="res://obstacles.tscn" type="PackedScene" id=2]
[ext_resource path="res://Bird.tscn" type="PackedScene" id=3]
[ext_resource path="res://main.gd" type="Script" id=4]
[ext_resource path="res://Ui.tscn" type="PackedScene" id=5]
[ext_resource path="res://gameUi.tscn" type="PackedScene" id=6]
[ext_resource path="res://Ressources/BirdDead.wav" type="AudioStream" id=7]

[node name="main" type="Node2D"]
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1036, 0 )

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 796, 302 )
scale = Vector2( 0.792969, 0.792969 )
texture = ExtResource( 1 )

[node name="Bird" parent="." instance=ExtResource( 3 )]
position = Vector2( 263, 272 )

[node name="obstacles" parent="." instance=ExtResource( 2 )]
pipesSpeed = 250
max_ecart = 500
min_ecart = 200
min_spawning_x = 400

[node name="Ui" parent="." instance=ExtResource( 5 )]

[node name="gameUi" parent="." instance=ExtResource( 6 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="one_pipe_passed" from="obstacles" to="." method="_on_obstacles_one_pipe_passed"]
[connection signal="touched" from="obstacles" to="." method="_on_obstacles_touched"]
[connection signal="start_game" from="Ui" to="." method="_on_Ui_start_game"]
